# katago-server

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: analysis.cfg
katago_server/: __init__.py  __main__.py  config.py  engine.py  mcp_server.py  models.py  serve.py
tests/: test_e2e.py  test_engine.py  test_models.py  test_serve.py
