[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "katago-server"
version = "0.1.0"
description = "KataGo analysis server with WebSocket and MCP interfaces"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest", "pytest-asyncio", "httpx", "ruff"]

[project.scripts]
katago-server = "katago_server.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: requires a real KataGo binary and model",
]
